# melt_solver_2d

./: .gitignore  README.md  pyproject.toml  requirements.txt
parameter_sets/air/: config.json  fluid_params_10_6.json
parameter_sets/gallium/: config.json  thermal_params_6_10_5.json
parameter_sets/octadecane/: config.json
parameter_sets/octodecane/: config.json  thermal_params.json
parameter_sets/water/: convection.json  crevasse.json  fluid_params_10_8.json  freezing.json  horizontal_layer.json  icicle.json  thermal_params_10_8.json
src/: base_solver.py  boundary_conditions.py  convective_operator.py  geometry.py  main.py  solver.py  utils.py
src/convective_operators/: __init__.py  base_convective_operator.py  sf_based.py  stream_function_transport.py  vorticity_based.py  vorticity_transport.py
src/core/: boundary_conditions.py  constants.py  geometry.py  runner.py
src/fluid_dynamics/: init_values.py  parameters.py  plotting.py  utils.py
src/heat_transfer/: boundary.py  init_values.py  parameters.py  plotting.py  pt_boundary.py  utils.py
src/parameters/: config.py  fluid.py  material_properties.py  mixins.py  thermal.py
src/tests/: poisson.py  poisson_solver.py  test_cg.py  test_matrix_sweep.py  test_sor.py  test_tridiagonal_solver.py  tridiagonal_solver.py
src/utils/: array_masks.py  boundary_conditions.py  conv_vs_cond.py  convection_benchmark.py  convergence_test.py  icicle.py  mininize_delta.py  numerics.py  nusselt.py  nusselt_wavy.py  octodecane.py  plot_crevasse.py  plot_gallium.py  plot_icicle.py  plot_latent_heat.py  plot_octadecane.py  (+13 more)
(+213 files in other folders)
