[tool.poetry]
name = "smooth-coefficients"
version = "0.1.0"
description = ""
authors = ["SlightlyMadMax <makcandreev2001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numba = "^0.60.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
